<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="casual"
        android:text="@string/system_monitor"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="105dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contextClickable="false"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Apps"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:onClick="launchAppsActivity"
                android:text="@string/apps_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/Cpu"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:onClick="launchCpuActivity"
                android:text="@string/cpu_button"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="284dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Memory"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:onClick="launchMemActivity"
                android:text="@string/memory_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/System"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:onClick="launchSysActivity"
                android:text="@string/system_button"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>